<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Songbook Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
   <string name="maintenance">File / DB Utility</string>
    <string name="song_sort">Sort by Songs</string>
    <string name="singer_sort">Sort by Singers</string>
    <string name="search">Search...</string>
    <string name="search_text"></string>
    <string name="app_about">About SongbookMgr</string>
    <string name="db_restore">Restore Song DB</string>
    <string name="db_backup">Backup Current DB</string>
    <string name="db_email">Email Songbook DB</string>
    <string name="import_song_file">Import Songbook</string>
    <string name="lDelim">(</string>
    <string name="rDelim">)</string>
    <string name="app_help">Help</string>
    <string name="app_info">Songbook Manager is a small Android Application
         to display TKaraoke song ID for selecting songs from TKaraoke.
         SongbookMgr can also do limited control of TKaraoke software if
         sbConnectionMgr server is installed on the PC side. All the icons used in
         this app are free from www.findicons.com. Since this is my first
         Android app, I really need a ton of help in getting started -- and
         I did find it on the Web thanks to numerous mentors who would not
         mind sacrifying their valuable time to teach newbee like me to get
         on Android software development. </string>
    <string name="email_subject">SongbookMgr DB</string>
    <string name="fav_list">Favorite Songbook</string>
    <string name="main_songbook">Songbook</string>
    <string name="songbook_import">Import Songbook</string>
    <string name="songbookdb_backup">SongbookDB Backup</string>
    <string name="songbookdb_restore">SongbookDB Restore</string>
    <string name="db_tools">DB Utilities</string>
    <string name="email_db">Email Songbook DB</string>
    <string name="config">Config</string>
    <string name="textsize_config">Display Text Setup</string>
    <string name="favsongbookdb_backup">Fav SongbookDB Backup</string>
    <string name="fav_dbrestore">Fav SongbookDB Restore</string>
    <string name="dbrestore">SongbookDB Restore</string>    
    <string name="fav_undimall">Clear All Grayed Entries</string>
    <string name="create_newfabsongbook">New Fav Songbook</string>
    <string name="remove_this_tab">Remove this Songbook</string>
    <string name="multi_selection">Multi Select</string>
    <string name="import_info">The songbook catalog file must be generated by TKaraoke software when the
        user choose Generate Song Catalog from its Tools menu. TKaraoke normally defaults to using parentheses
        to enclose the singer names. SongbookMgr will look for these symbols to delimit the songs/singers during
        import. If the songs happen to have parentheses in their names, angle brackets (\u003c\u003e) must be used so that
        SongbookMgr can distinguish between song and singer columns.</string>
    <string name="import_from_server_info">The songbook can be imported directly into SongbookMgr if a server program
         named sbConnectionMgr is running on the media server computer. This program will generate an XML
         stream from TKaraoke song catalog then send it directly to SongbookMgr. There is no need to copy the
         songbook catalog to the device before parsing it out. This is the preferred method to get the songbook
         catalog to the phone.</string>
    <string name="toggle_sound">Toggle Sound</string>
    <string name="skip_fwd">Forward</string>
    <string name="skip_bwd">Rewind</string>
    <string name="db_info">Songbook Info</string>
    <string name="build_date">2014/06/22</string>
    <string name="author">Danh Le, DanhKE6D@gmail.com</string>
    <string name="import_general_info">Before SongbookMgr can operate with TKaraoke Player, a songbook catalog
        must be imported into SongbookMgr. There are two ways to import the
        songbook catalog. The first and easiest way is to have TKaraoke software generate and save the songbook catalog
        using the default name, then register this file with sbConnectionMgr (one time setup) When the user clicks on
        \u0022Import from Server\u0022, SongbookMgr sends a command to sbConnectionMgr and have it upload
        directly into SongbookMgr. The songbook catalog file can also be either copied or emailed to the phone from
        the media server computer for manually imported into SongbookMgr
    </string>
    <string name="menu_clear_playlist">Clear playlist</string>
    <string name="refresh">Refresh</string>
</resources>
