<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/import_text_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:text="@string/import_general_info"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@color/hilight_entry"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="1. Import from sbConnectionMgr"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/import_text_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:text="@string/import_from_server_info"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp" />
    <ImageButton
        android:id="@+id/import_server_btn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_download_server"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@color/hilight_entry"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="2. Import Songbook Catalog"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/import_text_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:text="@string/import_info"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp" />
    <TextView
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:text="Songbook column delimiters:"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Left"
            android:layout_marginLeft="5dp"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/LeftDelimiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textFilter"
            android:text="@string/lDelim" >
        </EditText>

        <TextView
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Right"
            android:layout_marginLeft="5dp"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/RightDelimiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textFilter"
            android:text="@string/rDelim" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Select song book text file"
            android:layout_marginLeft="5dp"
            android:textSize="18dp" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="48dp" >

            <EditText
                android:id="@+id/SongFileName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/BrowseButton"
                android:inputType="text" />

            <Button
                android:id="@+id/BrowseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="Browse"
                android:textSize="18dp" />
        </RelativeLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/songid_5digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use 5 Digit Song ID" />
    <ImageButton
        android:id="@+id/ImportButton"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_file_import"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

</LinearLayout>
</ScrollView>